@@ -319,6 +319,9 @@ typedef enum {
 
     /// Wrong version of dynamically loaded library.
     kCdiStatusLibraryWrongVersion   = 41,
+
+    /// Resource not available. Retry the operation.
+    kCdiStatusRetry                 = 42,
 } CdiReturnStatus;
 
 /// @brief A structure for holding a PTP timestamp defined in seconds and nanoseconds. This PTP time as defined by
