@@ -61,8 +61,8 @@
 /// other delays to occur without causing the probe to reset the connection.
 //#define DISABLE_PROBE_MONITORING
 
-/// @brief Enable the define below to set the libfabric log level. Default is FI_LOG_WARN.
-//#define LIBFABRIC_LOG_LEVEL         (FI_LOG_DEBUG)
+/// @brief Enable the define below to set the libfabric log level. Default is no logging.
+//#define LIBFABRIC_LOG_LEVEL         (0) // 0=FI_LOG_WARN, 3=FI_LOG_DEBUG
 
 /// @brief Log messages to aid in debugging Rx Buffer feature.
 //#define DEBUG_RX_BUFFER
